# shmqueue

./: .coveragerc  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agent.md  pyproject.toml  requirements.txt  requirements_win.txt
.github/: CODEOWNERS  auto-assign.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: pypi_publish.yml  python-tests.yml  weekly-latest-python.yml
shmqueue/: __init__.py  base_logger.py  buffer_operations.py  exceptions.py  shared_memory_collection.py  shared_memory_data.py  shmqueue_main.py
tests/: test_basics.py  test_block_timeout.py  test_debug_ref_log_action.py  test_exceptions.py  test_multiprocessing.py  test_serialization.py
